--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,10 @@ javafx {
     modules = ['javafx.controls', 'javafx.fxml', 'javafx.web', 'javafx.swing']
 }
 
+task wrapper(type: Wrapper) {
+    gradleVersion = '4.1'
+}
+
 dependencies {
     implementation 'com.google.code.gson:gson:2.8.7'
     implementation 'com.jfoenix:jfoenix:9.0.9'
