--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.20'
     testCompileOnly 'org.projectlombok:lombok:1.18.20'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
-    compile 'org.mongodb:mongo-java-driver:2.12.3'
+    compileOnly 'org.mongodb:mongo-java-driver:2.12.3'
 }
 
 test {
