--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -3,9 +3,9 @@ name: Test Build on Macos
 
 on:
   push:
-    branches: [ master ]
+    branches: [ * ]
   pull_request:
-    branches: [ master ]
+    branches: [ * ]
 
 jobs:
   build:
