--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -1,11 +1,7 @@
 
 name: Test Build on Windows
 
-on:
-  push:
-    branches: [ * ]
-  pull_request:
-    branches: [ * ]
+on: [push, pull_request]
 
 jobs:
   build:
