--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,15 @@
 plugins {
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.9'
-    id 'com.diffplug.spotless' version '5.14.2'
+    id 'com.diffplug.spotless' version '5.14.3'
+    id 'java'
 }
 
 sourceCompatibility = JavaVersion.VERSION_15
 targetCompatibility = JavaVersion.VERSION_15
 
 group 'com'
-version '1.0-SNAPSHOT'
+version '1.0-Alpha'
 mainClassName = 'com.sjmulhern.dndTracker.Main'
 
 repositories {
@@ -21,7 +22,7 @@ javafx {
 }
 
 dependencies {
-    implementation 'com.google.code.gson:gson:2.8.7'
+    implementation 'com.google.code.gson:gson:2.8.8'
     implementation 'com.jfoenix:jfoenix:9.0.10'
     implementation 'org.projectlombok:lombok:1.18.20'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.2'
@@ -31,6 +32,7 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok:1.18.20'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
     implementation 'org.mongodb:mongo-java-driver:3.12.10'
+    compileOnly 'com.diffplug.spotless:spotless-plugin-gradle:5.14.3'
 }
 
 test {
@@ -48,5 +50,14 @@ spotless {
         indentWithSpaces(4)
         trimTrailingWhitespace()
         endWithNewline()
+    }
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': mainClassName
+    }
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
