Added both catacombs and chapel

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,10 @@ test {
 compileJava.dependsOn 'spotlessApply'
 
 spotless {
+    json {
+        target '**/*.json'
+        simple().indentWithSpaces(4)
+    }
     java {
         importOrder()
         removeUnusedImports()
